--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Taurean Wooley - Portfolio</title>
+    <script src="js/main.js" type="text/javascript"></script>
   </head>
   <body>
     <h1>Taurean Wooley - Portfolio</h1>
