--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Taurean Wooley - Portfolio</title>
+    <link href="css/style.css" type="text/css" ref="stylesheet"/>
     <script src="js/main.js" type="text/javascript"></script>
   </head>
   <body>
