--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         border-bottom: 1px solid rgba(0, 0, 0, 0.3);
       }
 
+      .project-info-holder {
+        margin-bottom: 15px;
+      }
+
       .description {
         font-size: 12px;
         line-height: 24px;
