--- a/index.html
+++ b/index.html
@@ -5,35 +5,35 @@
     <script src="js/main.js" type="text/javascript"></script>
     <style>
       body {
-        font-family: arial, sans-serif;
-      }
+  font-family: arial, sans-serif;
+}
 
-      h3 {
-        font-family: arial, sans-serif;
-        margin: 0px 0px 10px 0px;
-        font-size: 25px;
-        padding-bottom: 5px;
-        border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-      }
+h3 {
+  font-family: arial, sans-serif;
+  margin: 0px 0px 10px 0px;
+  font-size: 25px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+}
 
-      .project-info-holder {
-        margin-bottom: 15px;
-      }
+.project-info-holder {
+  margin-bottom: 15px;
+}
 
-      .description {
-        font-size: 12px;
-        line-height: 24px;
-        color: #545454;
-      }
+.description {
+  font-size: 12px;
+  line-height: 24px;
+  color: #545454;
+  padding-bottom: 10px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+}
 
-      .technologies {
-        border-top: 1px solid rgba(0, 0, 0, 0.3);
-        padding-top: 5px;
-        margin-top: 10px;
-        font-size: 11px;
-        font-weight: bold;
-        color: #aa00ff;
-      }
+.technologies {
+  margin: 0px;
+  font-size: 11px;
+  font-weight: bold;
+  color: #000000;
+}
     </style>
   </head>
   <body>
